--- a/ParkingApp/Info.plist
+++ b/ParkingApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>위치설정 허용할껴?</string>
 	<key>NMFClientId</key>
 	<string>ll16o49rxm</string>
 	<key>UIApplicationSceneManifest</key>
