--- a/ParkingApp/Info.plist
+++ b/ParkingApp/Info.plist
@@ -25,5 +25,10 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
